# email-newsletter

./: .env.example  .gitignore  Cargo.toml
migrations/: 1656788910_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routers/: subscriptions.rs
tests/: health_check.rs
