[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
reqwest = "0.11.10"
tokio = { version = "1.19.2", features = ["full"] }
tokio-test = "0.4.2"
